testsuite/poke.pkl/funcall-diag-3.pk
/* { dg-do compile } */

fun foo = (int[2][2] a) int:
  {
   return a[1][1];
  }

fun bar = int:
  {
   return foo ([[1,2,3],[4,5,6]]); /* { dg-error "" } */
  }
